<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="">
        <menu>
            <item
                android:id="@+id/item1"
                android:title="@string/home"
                android:icon="@drawable/ic_home_black_24dp" />

            <item
                android:id="@+id/item7"
                android:title="@string/about_us"
                android:icon="@drawable/ic_group_add_black_24dp" />
            <item
                android:id="@+id/item2"
                android:icon="@android:drawable/ic_menu_view"
                android:title="@string/teacher_section" />
            <item
                android:id="@+id/item3"
                android:icon="@drawable/ic_face_black_24dp"
                android:title="@string/student_section" />
            <item
                android:id="@+id/item4"
                android:icon="@drawable/ic_camera_alt_black_24dp"
                android:title="@string/our_staff" />

            <item
                android:id="@+id/item9"
                android:icon="@drawable/ic_group_add_black_24dp"
                android:title="@string/our_schoolstaff" />
        </menu>
    </item>


    <item android:title="Admin Section">
        <menu>
            <item
                android:id="@+id/item8"
                android:icon="@drawable/ic_account_box_black_24dp"
                android:title="@string/admin_section">


            </item>

        </menu>
    </item>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/item5"
                android:icon="@drawable/ic_message_black_24dp"
                android:title="@string/notification_section" />
            <item
                android:id="@+id/item6"
                android:icon="@drawable/ic_contact_mail_black_24dp"
                android:title="Contact Us" />

        </menu>
    </item>

</menu>